// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectSlideshow renders correctly for projects with a statement 1`] = `
<div>
  <div
    class="slideshow"
  >
    <div
      class="slide "
    >
      <h2>
        My First Project
      </h2>
      <p>
        The 
        <em>
          statement
        </em>
         for the 
        <em>
          project
        </em>
      </p>
    </div>
    <div
      class="slide "
    >
      <img
        alt="My First Project - 01"
        height="600"
        src="/photos/my-first-project/01.jpg"
        width="800"
      />
    </div>
    <div
      class="slide "
    >
      <img
        alt="My First Project - 02"
        height="800"
        src="/photos/my-first-project/02.jpg"
        width="600"
      />
    </div>
    <div
      class="slide "
    >
      <img
        alt="My First Project - 03"
        height="600"
        src="/photos/my-first-project/03.jpg"
        width="800"
      />
    </div>
    <div
      class="navigation"
    >
      <a
        class="leftArrow"
      >
        ←
      </a>
      <h3>
        --
        /
        03
      </h3>
      <a
        class="rightArrow"
      >
        →
      </a>
    </div>
  </div>
</div>
`;

exports[`ProjectSlideshow renders correctly for projects with captions 1`] = `
<div>
  <div
    class="slideshow"
  >
    <div
      class="slide "
    >
      <img
        alt="Project without a statement - 01"
        height="600"
        src="/photos/no-statement/01.jpg"
        width="800"
      />
    </div>
    <div
      class="slide "
    >
      <img
        alt="Project without a statement - 02"
        height="600"
        src="/photos/no-statement/02.jpg"
        width="800"
      />
    </div>
    <div
      class="slide "
    >
      <img
        alt="Project without a statement - 03"
        height="800"
        src="/photos/no-statement/03.jpg"
        width="600"
      />
    </div>
    <div
      class="slide "
    >
      <img
        alt="Project without a statement - 04"
        height="600"
        src="/photos/no-statement/04.jpg"
        width="800"
      />
    </div>
    <div
      class="navigation"
    >
      <a
        class="leftArrow"
      >
        ←
      </a>
      <h3>
        --
        /
        04
      </h3>
      <a
        class="rightArrow"
      >
        →
      </a>
    </div>
    <div
      class="caption "
    >
      <p>
        This is 
        <em>
          image 1
        </em>
      </p>
    </div>
    <div
      class="caption "
    >
      <p>
        This is 
        <em>
          image 2
        </em>
      </p>
    </div>
    <div
      class="caption "
    >
      <p>
        This is 
        <em>
          image 3
        </em>
      </p>
    </div>
    <div
      class="caption "
    >
      <p>
        This is 
        <em>
          image 4
        </em>
      </p>
    </div>
  </div>
</div>
`;
